# macoro

./: .gitignore  CMakeLists.txt  CMakePresets.json  build.py  readme.md
.github/workflows/: build-test.yml
cmake/: Config.cmake.in  macoroBuildOptions.cmake  macoroBuildOptions.cmake.in  macoroConfig.cmake  macoroConfigVersion.cmake  macoroFindBuildDir.cmake  macoroFindDeps.cmake  macoroPreamble.cmake
cmake/testProject/: CMakeLists.txt  src.cpp
frontend/: CMakeLists.txt  main.cpp
macoro/: CMakeLists.txt  CoroFrame.h  Macros.h  Optional.h  TypeTraits.h  async_scope.h  awaiter.h  blocking.h  cancellation.h  channel.h  channel_spsc.h  config.h  config.h.in  coro_frame.h  coroutine_handle.cpp  coroutine_handle.h  eager_task.h  io_service.cpp  io_service.h  macros.h  main.cpp  manual_reset_event.h  on_scope_exit.h  optional.h  result.h  sequence_barrier.h  sequence_mpsc.h  sequence_spsc.h  start_on.h  stop.h  sync_wait.h  take_until.h  task.h  thread_delay_scheduler.h  thread_pool.cpp  thread_pool.h  timeout.h  todo.txt  trace.h  transfer_to.h  (+5 more)
macoro/detail/: cancellation_awaiter.h  cancellation_registration.cpp  cancellation_registration.h  cancellation_source.cpp  cancellation_source.h  cancellation_state.cpp  cancellation_state.h  cancellation_token.cpp  cancellation_token.h  manual_lifetime.h  scoped_task_promise.h  stop_awaiter.h  stop_callback.cpp  stop_callback.h  stop_source.cpp  stop_source.h  stop_state.cpp  stop_state.h  stop_token.cpp  stop_token.h  when_all_awaitable.h  when_all_counter.h  when_all_task.h  win32.cpp  win32_overlapped_operation.h
macoro/impl/: cancellation_registration.cpp  cancellation_registration.h  cancellation_source.cpp  cancellation_source.h  cancellation_state.cpp  cancellation_state.h  cancellation_token.cpp  cancellation_token.h  when_all_awaitable.h  when_all_counter.h  when_all_task.h
tests/: CLP.cpp  CLP.h  CMakeLists.txt  async_scope_tests.cpp  async_scope_tests.h  await_lifetime_tests.cpp  await_lifetime_tests.h  channel_mpsc_tests.cpp  channel_mpsc_tests.h  channel_spsc_tests.cpp  channel_spsc_tests.h  eager_task_tests.cpp  eager_task_tests.h  result_tests.cpp  result_tests.h  sequence_tests.cpp  sequence_tests.h  take_until_tests.cpp  take_until_tests.h  task_tests.cpp  task_tests.h  tests.cpp  tests.h  when_all_tests.cpp  when_all_tests.h  yield_await_tests.cpp  yield_await_tests.h
